// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test welcome page should render setDBpassword page correctly 1`] = `
"
  <!--views/partials/head.ejs-->
<meta charset='UTF-8'>
<title></title>
<!--CSS (load bootstrap from a CDN)-->
<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/open-fonts@1.1.1/fonts/inter.min.css\\">
<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css\\">
<style>
    * {
        text-align: center;
    }
    input {
        width: 400px;
        height: 40px;
        margin: 5px;
    }
    button {
        width: 400px;
        height: 40px;
        margin: 10px;
    }
    .card {
        width: 450px;
        margin: auto;
    }
    .subtitle {
        margin: 10px;
    }
    .body {
        margin: 10px;
    }
</style>



<main>
    <div class=\\"card\\">
        <div class=\\"header\\">
            <h1 class=\\"title\\">Learn Databases</h1>
        </div>
        <div class=\\"body\\">
            <input class=\\"dbPassword\\" placeholder=\\"password\\">
            <button class=\\"setButton\\">Set</button>
        </div>
    </div>
</main>
<script>
    const dbPassword = document.querySelector('.dbPassword')
    const setButton = document.querySelector('.setButton')

    setButton.addEventListener('click',()=>{
        fetch('/api/users/:id',{
            method:\\"PATCH\\",
            headers:{
                'Content-Type': 'application/json'
            },
            body:JSON.stringify({
                password:dbPassword.value
            })
        }).then(r=>r.json()).then(r=>{
            return location.href = '/databases'
        })
    })
</script>
"
`;

exports[`test welcome page should render sign in page correctly 1`] = `
"
    <!--views/partials/head.ejs-->
<meta charset='UTF-8'>
<title></title>
<!--CSS (load bootstrap from a CDN)-->
<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/open-fonts@1.1.1/fonts/inter.min.css\\">
<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css\\">
<style>
    * {
        text-align: center;
    }
    input {
        width: 400px;
        height: 40px;
        margin: 5px;
    }
    button {
        width: 400px;
        height: 40px;
        margin: 10px;
    }
    .card {
        width: 450px;
        margin: auto;
    }
    .subtitle {
        margin: 10px;
    }
    .body {
        margin: 10px;
    }
</style>
<main>
    <div class=\\"card\\">
        <div class=\\"head\\">
            <h1 class=\\"title\\">Learn Databases</h1>
        </div>
        <div class=\\"body\\">
            <div class=\\"subtitle\\">Please log in</div>
            <input class=\\"username\\" placeholder=\\"username\\" /><br>
            <input class=\\"password\\" placeholder=\\"password\\" type=\\"password\\"/>
            <button class=\\"submit\\">Submit</button>
        </div>
        <div class=\\"tale\\">
            <div>Forgot Password? <a href=\\"#\\">Find Password</a></div>
            <div>Don't have account? <a href=\\"/signup\\">Sign Up</a></div>
        </div>
    </div>
</main>

<script>
    const username = document.querySelector('.username')
    const password = document.querySelector('.password')
    const submit = document.querySelector('.submit')

    submit.addEventListener('click', () => {
        fetch('/api/session', {
            method: \\"POST\\",
            headers: {
                'Content-Type': 'application/json'
            },
            body: JSON.stringify({
                username: username.value.toLowerCase(),
                password: password.value
            })
        }).then(r => r.json()).then((r) => {
            if (r.dbPassword) return location.href = '/setDBPassword' //path name is not decided yet  
            return location.href = '/databases' //path name is not decided yet
        })
    })
</script>

"
`;

exports[`test welcome page should render sign up page correctly 1`] = `
"

  <!--views/partials/head.ejs-->
<meta charset='UTF-8'>
<title></title>
<!--CSS (load bootstrap from a CDN)-->
<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/open-fonts@1.1.1/fonts/inter.min.css\\">
<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css\\">
<style>
    * {
        text-align: center;
    }
    input {
        width: 400px;
        height: 40px;
        margin: 5px;
    }
    button {
        width: 400px;
        height: 40px;
        margin: 10px;
    }
    .card {
        width: 450px;
        margin: auto;
    }
    .subtitle {
        margin: 10px;
    }
    .body {
        margin: 10px;
    }
</style>


<h1>Learn Databases</h1>

<p>Create Account</p>

<div>
  <input
    class=\\"email\\"
    type=\\"email\\"
    placeholder=\\"Email Address\\"
    required
    />
</div>

<div>
  <input
    class=\\"username\\"
    type=\\"text\\"
    placeholder=\\"Username\\"
    required
    />
</div>

<div>
  <button class=\\"submit\\">Create Account</button>
</div>

<div>
  Already have an account? <a href=\\"/signin\\">Login</a>
</div>

<script>
  const submit = document.querySelector('.submit');
  const check = document.querySelector('.check');
  const username = document.querySelector('.username')
  const email = document.querySelector('.email')

  submit.addEventListener('click', () => {
    alert(\\"Check your email and set your password\\")
    fetch('/api/users', {
      method: 'POST',
      headers: {
        'Content-Type': 'application/json'
      },
      body: JSON.stringify({
        username: username.value.toLowerCase(),
        email: email.value.toLowerCase()
      })
    }).then(r => r.json()).then(() => {
      return location.href = '/signin'
    })
  })
</script>
"
`;

exports[`test welcome page should render welcome page correctly 1`] = `
"<!DOCTYPE html>
 <html lang=\\"en\\">
     <head>
         <meta charset='UTF-8'>
         <title></title>
     </head>
     <body>
         <h1>Welcome to learndb.dev</h1>
     </body>
 </html> 
"
`;
